<resources>
    <string name="app_name">Chat App</string>
    <string name="hello">Hello👋</string>
    <string name="log_in">LogIn to Continue </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="do_you_want_to_sign_out">Do you want to Sign Out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="select_user">Select User</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="online">Online</string>
</resources>